# html-streaming-editor

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
src/: command.rs  lib.rs  pipeline.rs
src/css/: mod.rs  tests.rs
src/element_creating/: command.rs  mod.rs  pipeline.rs
src/element_processing/: command.rs  mod.rs  pipeline.rs
src/element_processing/command/: mod.rs  tests.rs
src/element_processing/pipeline/: mod.rs  tests.rs
src/html/: mod.rs  tests.rs
src/parsing/: mod.rs  tests.rs
src/pipeline/: mod.rs  tests.rs
src/string_creating/: command.rs  mod.rs  pipeline.rs
tests/: add_comment.rs  add_element.rs  add_text_content.rs  append_comment.rs  append_element.rs  append_text_content.rs  clear_attr.rs  clear_content.rs  extract_element.rs  for.rs  for_each.rs  only.rs  pipeline.hsp  prepend_comment.rs  prepend_element.rs  prepend_text_content.rs  remove_element.rs  replace.rs  replace_element.rs  set_attr.rs  set_content.rs  set_text_content.rs  single_div.html  source.html  without.rs
