[package]
name = "html-streaming-editor"
version = "0.0.7"
edition = "2021"
authors = [":kelko: <kelko@me.com>"]
repository = "https://github.com/kelko/html-streaming-editor"
homepage = "https://github.com/kelko/html-streaming-editor"
license = "MIT"
description = "UNIX-tool like streaming editor for HTML content"
readme = "README.md"
categories = ["command-line-utilities", "text-editors"]
keywords = ["html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.0"
tl = "0.7.6"
snafu = { version = "0.7", features = ["backtraces"] }
clap = "3.2"
exitcode = "1.1.2"
log = "0.4"
pretty_env_logger = "0.4.0"
rctree = "0.4.0"
